--- a/Exercise5/ex5.html
+++ b/Exercise5/ex5.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>Ejercicio 5: Grid basico</h1>
+    <div class="container">
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+        <div class="box">4</div>
+        <div class="box">5</div>
+        <div class="box">6</div>
+    </div>
 </body>
 </html>
