--- a/Exercise7/ex7.html
+++ b/Exercise7/ex7.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div>1</div>
         <div>2</div>
-        <div>3</div>
+        <div class="box3">3</div>
         <div>4</div>
         <div>5</div>
         <div>6</div>
