--- a/Exercise8/ex8.html
+++ b/Exercise8/ex8.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="ex8.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Ejercicio 8: Grid avanzado con áreas</h1>
+    <div class="container">
+        <header class="header">Header</header>
+        <aside class="sidebar">Sidebar</aside>
+        <main class="main">Main</main>
+        <footer class="footer">Footer</footer>
+    </div>
 </body>
 </html>
