--- a/Exercise11/ex11.html
+++ b/Exercise11/ex11.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Ejercicio 11: Overlay</h1>
+    <div class="overlay"></div>
+        <div class="modal">
+            <h2>Dialogo</h2>
+            <p>Este es un cuadro sobre el overlay</p>
+        </div>
 </body>
 </html>
