--- a/Exercise12/ex12.html
+++ b/Exercise12/ex12.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Ejercicio 12: Tarjetas interactivas en capas</h1>
+    <div class="container">
+        <div class="card card1">1</div>
+        <div class="card card2">2</div>
+        <div class="card card3">3</div>
+    </div>
 </body>
 </html>
